kubernetes/components/traefik-route/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: web
  hostnames:
    - traefik.arunanshu.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /dashboard/assets/
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: cache-assets
      backendRefs:
        - group: ""
          kind: Service
          name: traefik-dashboard
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: traefik-dashboard
          port: 8080
          weight: 1
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: compress
